<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Loco">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="227dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtITitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/loco"
                android:textSize="30sp"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/thekinggnomo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="@string/descripcionImagen"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/presiona"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/textView"
                app:layout_constraintStart_toStartOf="@id/textView"
                app:layout_constraintTop_toBottomOf="@id/textView"
                tools:ignore="HardcodedText, UnusedAttribute" />


            <TextView
                android:id="@+id/txtLHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/btnLHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/obtenerhora"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/rank"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:textSize="25sp"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5" android:rating="5"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>